--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dependencies": {
         "axios": "^1.6.7",
         "dotenv": "^16.4.5",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "hot-shots": "^10.2.1"
     },
     "devDependencies": {
         "@types/express": "^4.17.21",
